# xx32

./: .gitignore  README.md
app/: Cargo.toml  Makefile  memory.x  openocd.gdb
app/.cargo/: config
app/src/: main.rs
ch32v3xx-pac/: Cargo.toml
ch32v3xx-pac/src/: adc2.rs  afio.rs  bkp.rs  can1.rs  crc.rs  dac.rs  dbg.rs  dma1.rs  dma2.rs  dvp.rs  ethernet_dma.rs  ethernet_mac.rs  ethernet_mmc.rs  ethernet_ptp.rs  extend.rs  exti.rs  flash.rs  fsmc.rs  generic.rs  gpioa.rs  i2c1.rs  interrupt.rs  iwdg.rs  lib.rs  opa.rs  pfic.rs  pwr.rs  rcc.rs  rng.rs  rtc.rs  sdio.rs  spi1.rs  spi2.rs  tim1.rs  tim2.rs  tim6.rs  usart1.rs  usb.rs  usb_otg_fs.rs  usbhd.rs  (+1 more)
ch32v3xx-pac/src/adc1/: ctlr1.rs  ctlr2.rs  idatar1_chgoffset.rs  idatar2.rs  idatar4.rs  rdatar_dr_act_dcg.rs  rsqr1.rs  rsqr2.rs  rsqr3__channel.rs  samptr1_charge1.rs  samptr2_charge2.rs  statr.rs
ch32v3xx-pac/src/adc2/: idatar3.rs  iofr1.rs  iofr2.rs  iofr3.rs  iofr4.rs  isqr.rs  wdhtr.rs  wdltr.rs
ch32v3xx-pac/src/afio/: ecr.rs  exticr1.rs  exticr2.rs  exticr3.rs  exticr4.rs  pcfr.rs  pcfr2.rs
ch32v3xx-pac/src/bkp/: datar1.rs  datar10.rs  datar11.rs  datar12.rs  datar13.rs  datar14.rs  datar15.rs  datar16.rs  datar17.rs  datar18.rs  datar19.rs  datar2.rs  datar20.rs  datar21.rs  datar22.rs  datar23.rs  datar24.rs  datar25.rs  datar26.rs  datar27.rs  datar28.rs  datar29.rs  datar3.rs  datar30.rs  datar31.rs  datar32.rs  datar33.rs  datar34.rs  datar35.rs  datar36.rs  datar37.rs  datar38.rs  datar39.rs  datar4.rs  datar40.rs  datar41.rs  datar42.rs  datar5.rs  datar6.rs  datar7.rs  (+5 more)
(+836 files in other folders)
