[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ch32v3xx-pac = { version = "0.1.0", path = "../ch32v3xx-pac", features=[ "rt", "critical-section" ] }
panic-halt = "0.2.0"
riscv = { version = "0.10.1", features = [ "critical-section-single-hart" ] }
riscv-rt = "0.11.0"
