[package]
name = "ch32v3xx-pac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = { version = "1.1.2", optional = true }
riscv = "0.10.1"
riscv-rt = { version = "0.11.0", optional = true }
vcell = "0.1.3"

[features]
rt = ["riscv-rt"]

